tests/bad/syntax/021-simple-string.clap
val s : String = "Hello happy coders!"

